[workspace]
members = [
   "async_db",
   "async_ex1",
   "async_ex2",
   "async_pg",
   "awc_https",
   "basics",
   "casbin",
   "cookie-auth",
   "cookie-session",
   "diesel",
   "error_handling",
   "form",
   "graphql-demo",
   "hello-world",
   "http-proxy",
   "json",
   "json_error",
   "jsonrpc",
   "juniper",
   "middleware",
   "multipart",
   "multipart-s3",
   "multipart-async-std",
   "openssl",
   "protobuf",
   "r2d2",
   "redis",
   "redis-session",
   "run-in-thread",
   "rustls",
   "shutdown-server",
   "server-sent-events",
   "simple-auth-server",
   "state",
   "static_index",
   "template_askama",
   "template_handlebars",
   "template_tera",
   "template_yarte",
   "todo",
#   "udp-echo",
   "unix-socket",
   "web-cors/backend",
   "websocket",
   "websocket-chat",
#   "websocket-chat-broker",
   "websocket-tcp-chat",
   "docker_sample",
]

[patch.crates-io]
actix-web = { version = "2.0.0", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-speed-1393" }
awc = { version = "1.0.1", features = ["rustls"], git = "https://github.com/dunnock/actix-web", branch = "h2-speed-1393" }
actix-http = { version = "2.0.0-alpha.1", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-speed-1393" }
