[package]
name = "awc_https"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"
workspace = ".."


[dependencies]
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-speed-1393" }
awc = { version = "1.0.1", features = ["openssl"], git = "https://github.com/dunnock/actix-web", branch = "h2-speed-1393" }
